force-app/main/default/objects/RV_MRC_Item_Staging__c/RV_MRC_Item_Staging__c.object-meta.xml
<CustomObject>
    <label>MRC Item Staging</label>
    <nameField>
        <label>MRC Item Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRC Item Stagings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>