force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Condition_group_2__c.field-meta.xml
<CustomField>
    <fullName>Condition_group_2__c</fullName>
    <label>Condition group 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>