force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Condition_group_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Condition_group_2_Description__c</fullName>
    <label>Condition group 2 Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>