force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Handling_Type__c.field-meta.xml
<CustomField>
    <fullName>Handling_Type__c</fullName>
    <label>Handling Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>