force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Incoterms_Part1__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Part1__c</fullName>
    <label>Incoterms Part1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>