force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Incoterms_Part2__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Part2__c</fullName>
    <label>Incoterms Part2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>