force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Invoicing_date__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_date__c</fullName>
    <label>Invoicing date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>