force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Invoicing_dates_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_dates_Description__c</fullName>
    <label>Invoicing dates Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>