force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Master_Reference_Contract_number__c.field-meta.xml
<CustomField>
    <fullName>Master_Reference_Contract_number__c</fullName>
    <label>Master Reference Contract number</label>
    <referenceTo>RV_MRC_Header_Staging__c</referenceTo>
    <relationshipLabel>MRC Item Stagings</relationshipLabel>
    <relationshipName>MRC_Item_Stagings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>