force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Mater_Reference_Contract_Item_number__c.field-meta.xml
<CustomField>
    <fullName>Mater_Reference_Contract_Item_number__c</fullName>
    <label>Mater Reference Contract Item number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>