force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <label>Material Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>