force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Mode_of_Transport_Description__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport_Description__c</fullName>
    <label>Mode of Transport Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>