force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>80</length>
    <type>Text</type>
</CustomField>