force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <length>80</length>
    <type>Text</type>
</CustomField>