force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Reason_for_Rejection_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection_Code__c</fullName>
    <label>Reason for Rejection Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>