force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Reason_for_Rejection_Message__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection_Message__c</fullName>
    <label>Reason for Rejection Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>