force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/TAS_Data_3rd_party_code__c.field-meta.xml
<CustomField>
    <fullName>TAS_Data_3rd_party_code__c</fullName>
    <label>TAS Data - 3rd party code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>