force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/TAS_Data_Load_ID__c.field-meta.xml
<CustomField>
    <fullName>TAS_Data_Load_ID__c</fullName>
    <label>TAS Data - Load ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>