force-app/main/default/objects/RV_MRC_Item_Staging__c/fields/Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Type__c</fullName>
    <label>Valuation Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>